test/langtools/tools/javac/patterns/declarations/InstanceOfStatementErrors.out
InstanceOfStatementErrors.java:12:9: compiler.err.not.exhaustive.statement
1 error
